--- a/style.css
+++ b/style.css
@@ -1,3 +1,16 @@
-.container{
-    background-color: lavender;
+
+*{
+    margin: 0 auto;
+    justify-content: center;
+}
+
+.topText{
+    font-size: 300%;
+    padding: 0;
+    margin: 0;
+}
+
+h1{
+    padding: 0;
+    margin: 0;
 }
