--- a/style.css
+++ b/style.css
@@ -1,9 +1,3 @@
-
-*{
-    margin: 0 auto;
-    justify-content: center;
-}
-
 .topText{
     font-size: 300%;
     padding: 0;
@@ -13,4 +7,8 @@
 h1{
     padding: 0;
     margin: 0;
+}
+
+.index-tiles > div{
+    margin-top: 5%;
 }
