--- a/style.css
+++ b/style.css
@@ -197,7 +197,8 @@ button.dropdown-toggle{
     .progress{
         transform: rotate(270deg);
         margin: 17% 0;
-        height: 60vw
+        height: 60vw;
+        border-radius: 50px 8px 8px  50px;
     }
     .barTxt{
         transform: rotate(90deg);
