--- a/style.css
+++ b/style.css
@@ -1,324 +1,345 @@
-body, .index-tiles>div>.topText, .conButt{
-    background-color: #cccccc;
-    font-family: 'Titillium Web', sans-serif;
-    letter-spacing: 0.2vw;
-    font-size: 2vw;
-    padding: 0;
-    margin: 0;
+body,
+.index-tiles>div>.topText,
+.conButt {
+	background-color: #cccccc;
+	font-family: 'Titillium Web', sans-serif;
+	letter-spacing: 0.2vw;
+	font-size: 2vw;
+	padding: 0;
+	margin: 0;
 }
 
+.art{
+	border: solid saddlebrown
+}
+
+/*remove focus outline*/
+input:focus, button:focus, .btn:focus{
+    outline: none;
+    box-shadow: none;
+    filter: invert(60%);
+}
 
 /*set font for headers and remove padding from bootstrap*/
-h1, h2, h3, h4{
-    font-family: 'Dosis', sans-serif;
-    letter-spacing: 0.35vw;
-    font-size: 7vw;
-    margin: 0;
+
+h1,
+h2,
+h3,
+h4 {
+	font-family: 'Dosis', sans-serif;
+	letter-spacing: 0.35vw;
+	font-size: 7vw;
+	margin: 0;
 }
 
 
 /*'DAILY EXPENSES' Month*/
-#topText{
-    background-color: #ebebeb;
-    padding: 0
-}
-#topText > div > h1{
-    letter-spacing: 1vw;
-    font-size: 8vw;
-    padding-top: 1.5vw;
-    line-height: 6vw;
+
+#topText {
+	background-color: #ebebeb;
+	padding: 0
 }
 
-#topText > div > p{
-    letter-spacing: 0.3vw;
-    font-size: 2.4vw;
+#topText>div>h1 {
+	letter-spacing: 1vw;
+	font-size: 8vw;
+	padding-top: 1.5vw;
+	line-height: 6vw;
 }
 
+#topText>div>p {
+	letter-spacing: 0.3vw;
+	font-size: 2.4vw;
+}
 
 
 /*Wallet Selection*/
-.index-wallet-section{
-    border-radius: 7px;
-    margin: 3.5% auto;
-    padding-bottom: 0.3%;
-    background-color: #e5e5e5;
-}
-.index-wallet-section>h2{
-    font-size: 350%;
-    margin-bottom: 2.8%;
-    line-height: 50%;
-}
-p.panel-footer{
-    font-size: 1.9vw;
-    font-weight: bold;
-    margin: 2% 0;
-    line-height: 40px;
+
+.index-wallet-section {
+	border-radius: 7px;
+	margin: 3.5% auto;
+	padding-bottom: 0.3%;
+	background-color: #e5e5e5;
 }
 
+.index-wallet-section>h2 {
+	font-size: 350%;
+	margin-bottom: 2.8%;
+	line-height: 50%;
+}
+
+p.panel-footer {
+	font-size: 1.9vw;
+	font-weight: bold;
+	margin: 2% 0;
+	line-height: 40px;
+}
 
 
 /*add buttons*/
-.plus-button{
-    font-family: 'Titillium Web', sans-serif;
-    height: 5.5vw;
-    width: 5.5vw;
-    font-size: 9.9vw;
-    line-height: 3.2vw;
-    text-align: center;
-    vertical-align: middle;
-    border-radius: 50%;
-    background-color: #ababab;
-    color: #ebebeb;
-    position:fixed;
-    margin-right: 3vw;
-    margin-bottom: 2vw;
-    bottom:0;
-    right:0;
-}
 
+.plus-button {
+	font-family: 'Titillium Web', sans-serif;
+	height: 5.5vw;
+	width: 5.5vw;
+	font-size: 9.9vw;
+	line-height: 3.2vw;
+	text-align: center;
+	vertical-align: middle;
+	border-radius: 50%;
+	background-color: #ababab;
+	color: #ebebeb;
+	position: fixed;
+	margin-right: 3vw;
+	margin-bottom: 2vw;
+	bottom: 0;
+	right: 0;
+}
 
 
 /*tiles*/
-.index-tiles{
-    column-count: 2;
-    column-gap: 6%;
-    width: 93%;
-    margin: 5% auto;
+
+.index-tiles {
+	column-count: 2;
+	column-gap: 6%;
+	width: 93%;
+	margin: 5% auto;
 }
 
-.index-tiles > div{
-    border-radius: 15px;
-    background-color: #ebebeb;
-    margin-top: 6%;
-    padding: 3% 0;
-    break-inside: avoid-column; /*prevents each tile from breaking https://stackoverflow.com/questions/7785374/how-to-prevent-column-break-within-an-element*/
+.index-tiles>div {
+	border-radius: 15px;
+	background-color: #ebebeb;
+	margin-top: 6%;
+	padding: 3% 0;
+	break-inside: avoid-column;
+	/*prevents each tile from breaking https://stackoverflow.com/questions/7785374/how-to-prevent-column-break-within-an-element*/
 }
 
-h3{
-    letter-spacing: 0.4vw;
-    font-size: 3.5vw;
+h3 {
+	letter-spacing: 0.4vw;
+	font-size: 3.5vw;
 }
+
 
 /*progress bar*/
-.progress{
-    height:60px;
-    background-color:#aaaaaa;
-    border-radius:10px;
-    font-size: 2vw;
+
+.progress {
+	height: 60px;
+	background-color: #aaaaaa;
+	border-radius: 10px;
+	font-size: 2vw;
 }
+
 
 /*amount spent / purchase quantity*/
-span.col-10.ml-4{
-    font-size: 1.6vw;
+
+span.col-10.ml-4 {
+	font-size: 1.6vw;
 }
 
-.index-amountSpentWallet > span.p-0, .index-purchaseQtyWallet > span.p-0{
-    line-height: 1vw;
-    margin-bottom: 5%;
+.index-amountSpentWallet>span.p-0,
+.index-purchaseQtyWallet>span.p-0 {
+	line-height: 1vw;
+	margin-bottom: 5%;
 }
-
 
 
 /*Currency Converter*/
-button.dropdown-toggle{
-    font-size: 2vw;
-    margin-top: 2%;
+
+button.dropdown-toggle {
+	font-size: 2vw;
+	margin-top: 2%;
 }
 
-.CurDrop{
-    font-size: 1.5vw;
-    overflow-y: scroll;
-    max-height: 15vw;
+.CurDrop {
+	font-size: 1.5vw;
+	overflow-y: scroll;
+	max-height: 15vw;
 }
+
 
 /*news*/
-.tit{
-    margin: auto 0;
-    line-height: 2.7vw;
-    font-size: 2vw
+
+.tit {
+	margin: auto 0;
+	line-height: 2.7vw;
+	font-size: 2vw
 }
 
+.art>span>img {
+	border-radius: 50%;
+	width: 9.5vw;
+	height: 9.5vw;
+	object-fit: cover
+}
 
 @media only screen and (max-width: 900px) {
-    body, .index-tiles>div>.topText, .conButt{
-        letter-spacing: 0.25vw;
-        font-size: 4.5vw;
-    }
-    
-    /*set font for headers*/
-    h1, h2, h3, h4, .index-tiles>div>div>div>h3{
-        letter-spacing: 0.35vw;
-        font-size: 8.5vw;
-    }
-
-
-
-
-
-    /*'DAILY EXPENSES' Month*/
-    #topText{
-        padding-bottom: 0.1%;
-    }
-    #topText > div > h1{
-        letter-spacing: 2.5vw;
-        font-size: 13vw;
-        padding-top: 1.5vw;
-        line-height: 12.6vw;
-    }
-    #topText > div > p{
-        letter-spacing: 0.5vw;
-        font-size: 6vw;
-        line-height: 5vw;
-    }
-
-    .index-tiles{
-        column-count: 1;
-    }
-
-
-    /*wallet selection*/
-    .index-wallet-section>h2{
-        font-size: 11.2vw;
-        margin-bottom: 5%;
-        line-height: 20%;
-    }
-    .index-wallet-container>div{
-        margin-top:1%;
-    }
-    p.panel-footer{
-        font-size: 2.7vw;
-        margin: 0.8% 0;
-    }
-
-
-    /*add buttons*/
-    .plus-button{
-        height: 11vw;
-        width: 11vw;
-        font-size: 19.8vw;
-        line-height: 6.4vw;
-        margin-bottom: 1%;
-    }
-
-    /*tiles*/
-
-    /*progress bar*/
-
-    .progress{
-        transform: rotate(270deg);
-        margin: 17% 0;
-        height: 60vw;
-        border-radius: 50px 8px 8px  50px;
-    }
-    .barTxt{
-        transform: rotate(90deg);
-    }
-
-
-    /*amount spent / purchase quantity*/
-    span.col-10.ml-4{
-        font-size: 4vw;
-    }
-
-    .index-amountSpentWallet > span.p-0, .index-purchaseQtyWallet > span.p-0{
-        line-height: 4.5vw;
-        margin-bottom: 10%;
-        font-size: 6vw;
-    }
-
-    /*Currency Converter*/
-    button.dropdown-toggle{
-        font-size: 4.5vw;
-        letter-spacing: 0.5vw;
-    }
-
-    .CurDrop{
-        font-size: 4vw;
-        overflow-y: scroll;
-        max-height: 40vw;
-    }
-
-    /*news*/
-    .tit, .upTxt{
-        margin: 0;
-        bottom:0;
-        line-height: 5.6vw;
-        font-size: 3.5vw;
-        margin-bottom: 3%;
-
-    }
-
-
+	body,
+	.index-tiles>div>.topText,
+	.conButt {
+		letter-spacing: 0.25vw;
+		font-size: 4.5vw;
+	}
+	/*set font for headers*/
+	h1,
+	h2,
+	h3,
+	h4,
+	.index-tiles>div>div>div>h3 {
+		letter-spacing: 0.35vw;
+		font-size: 8.5vw;
+	}
+	/*'DAILY EXPENSES' Month*/
+	#topText {
+		padding-bottom: 0.1%;
+	}
+	#topText>div>h1 {
+		letter-spacing: 2.5vw;
+		font-size: 13vw;
+		padding-top: 1.5vw;
+		line-height: 12.6vw;
+	}
+	#topText>div>p {
+		letter-spacing: 0.5vw;
+		font-size: 6vw;
+		line-height: 5vw;
+	}
+	.index-tiles {
+		column-count: 1;
+	}
+	/*wallet selection*/
+	.index-wallet-section>h2 {
+		font-size: 11.2vw;
+		margin-bottom: 5%;
+		line-height: 20%;
+	}
+	.index-wallet-container>div {
+		margin-top: 1%;
+	}
+	p.panel-footer {
+		font-size: 2.7vw;
+		margin: 0.8% 0;
+	}
+	/*add buttons*/
+	.plus-button {
+		height: 11vw;
+		width: 11vw;
+		font-size: 19.8vw;
+		line-height: 6.4vw;
+		margin-bottom: 1%;
+	}
+	/*tiles*/
+	/*progress bar*/
+	.progress {
+		transform: rotate(270deg);
+		margin: 17% 0;
+		height: 60vw;
+		border-radius: 50px 8px 8px 50px;
+	}
+	.barTxt {
+		transform: rotate(90deg);
+	}
+	/*amount spent / purchase quantity*/
+	span.col-10.ml-4 {
+		font-size: 4vw;
+	}
+	.index-amountSpentWallet>span.p-0,
+	.index-purchaseQtyWallet>span.p-0 {
+		line-height: 4.5vw;
+		margin-bottom: 10%;
+		font-size: 6vw;
+	}
+	/*Currency Converter*/
+	button.dropdown-toggle {
+		font-size: 4.5vw;
+		letter-spacing: 0.5vw;
+	}
+	.CurDrop {
+		font-size: 4vw;
+		overflow-y: scroll;
+		max-height: 40vw;
+	}
+	/*news*/
+	.tit,
+	.upTxt {
+		margin: 0;
+		bottom: 0;
+		line-height: 5.6vw;
+		font-size: 3.5vw;
+		margin-bottom: 3%;
+	}
+	.art>span>img {
+		width: 18vw;
+		height: 18vw;
+	}
 }
 
 @media only screen and (max-width: 575px) {
-    body, .index-tiles>div>.topText, .conButt{
-        letter-spacing: 0.2vw;
-        font-size: 6vw;
-    }
-    
-    /*set font for headers*/
-    h1, h2, h3, h4{
-        letter-spacing: 0.3vw;
-        font-size: 13.5vw;
-        line-height: 12vw;
-    }
-
-
-    /*'DAILY EXPENSES' Month*/
-    #topText > div > h1{
-        letter-spacing: 3vw;
-        font-size: 15vw;
-        padding-top: 1.5vw;
-        line-height: 14vw;
-    }
-    #topText > div > p{
-        letter-spacing: 0.5vw;
-        font-size: 6vw;
-        line-height: 5vw;
-    }
-
-
-    /*wallet selection*/
-    .index-wallet-section>h2{
-        font-size: 13.5vw;
-        margin-bottom: 5%;
-        line-height: 14%;
-    }
-    .index-wallet-container>div{
-        margin-top:4%;
-    }
-    p.panel-footer{
-        font-size: 4.5vw;
-        line-height: 6vw;
-    }
-
-
-    /*add buttons*/
-    .plus-button{
-        height: 16.5vw;
-        width: 16.5vw;
-        font-size: 29.7vw;
-        line-height: 9.6vw;
-    }
-
-
-    /*change border radius of tiles*/
-    .index-tiles > div{
-        border-radius: 9px;
-    }
-
-
-    /*Currency Converter*/
-    button.dropdown-toggle{
-        font-size: 6vw
-    }
-
-    /*news*/
-    .sou{
-        font-size:4.5vw
-    }
-    .tit, .upTxt{
-        font-size: 4vw
-    }
+	body,
+	.index-tiles>div>.topText,
+	.conButt {
+		letter-spacing: 0.2vw;
+		font-size: 6vw;
+	}
+	/*set font for headers*/
+	h1,
+	h2,
+	h3,
+	h4 {
+		letter-spacing: 0.3vw;
+		font-size: 13.5vw;
+		line-height: 12vw;
+	}
+	/*'DAILY EXPENSES' Month*/
+	#topText>div>h1 {
+		letter-spacing: 3vw;
+		font-size: 15vw;
+		padding-top: 1.5vw;
+		line-height: 14vw;
+	}
+	#topText>div>p {
+		letter-spacing: 0.5vw;
+		font-size: 6vw;
+		line-height: 5vw;
+	}
+	/*wallet selection*/
+	.index-wallet-section>h2 {
+		font-size: 13.5vw;
+		margin-bottom: 5%;
+		line-height: 14%;
+	}
+	.index-wallet-container>div {
+		margin-top: 4%;
+	}
+	p.panel-footer {
+		font-size: 4.5vw;
+		line-height: 6vw;
+	}
+	/*add buttons*/
+	.plus-button {
+		height: 16.5vw;
+		width: 16.5vw;
+		font-size: 29.7vw;
+		line-height: 9.6vw;
+	}
+	/*change border radius of tiles*/
+	.index-tiles>div {
+		border-radius: 9px;
+	}
+	/*Currency Converter*/
+	button.dropdown-toggle {
+		font-size: 6vw
+	}
+	/*news*/
+	.sou {
+		font-size: 4.5vw
+	}
+	.tit,
+	.upTxt {
+		font-size: 4vw
+	}
+	.art>span>img {
+		width: 24vw;
+		height: 24vw;
+	}
 }
